# claudecode

./: CLAUDE.md  README.md
.claude/: settings.local.json
clawdbot-experiments/: .env.example  .gitignore  CLAUDE.md  Dockerfile  clawdbot.sh  docker-compose.yml  scan-email.sh
clawdbot-experiments/scripts/: email-scanner.js  package.json
clawdbot-experiments/security-audits/: 2026-01-28.md  README.md
clawdbot-experiments/specs/: browser-automation.md  custom-skills.md  email-inbox-cleanup.md  integrations-roadmap.md  memory-and-context.md  messaging-setup.md
docs/: alex_dunlop_blog.md  anthropic-best-practices.md  claude-md-ruleset.md  open-source-models.md  oversight-and-control.md  ralph-wiggum-methodology.md
openclaw-moltbook/: .dockerignore  .gitignore  AGENTS.md  Dockerfile.monitor  Dockerfile.proxy  IMPLEMENTATION_PLAN.md  PROMPT_build.md  PROMPT_plan.md  docker-compose.yml  loop.sh  pyproject.toml
openclaw-moltbook/.claude/: settings.local.json
openclaw-moltbook/nginx/: allowlist.conf  nginx.conf
openclaw-moltbook/specs/: data-schema.md  openclaw-api.md  polling-strategy.md  security-architecture.md  theme-classification.md  trend-analysis.md
openclaw-moltbook/src/monitor/: __init__.py  __main__.py  api_client.py  backoff.py  cli.py  deduplication.py  health.py  rate_limiter.py  robots.py  scheduler.py  web.py
openclaw-moltbook/tests/: __init__.py  conftest.py  test_api_client.py  test_backoff.py  test_cli.py  test_deduplication.py  test_health.py  test_network_isolation.py  test_rate_limiter.py  test_robots.py  test_scheduler.py  test_web.py
ralph-docker/: .env.example  Dockerfile  README.md  docker-compose.yml  litellm-config.yaml
ralph-docker/scripts/: entrypoint.sh  format-output.sh  loop.sh
scripts/: evaluate-models.sh  setup-ollama.sh
templates/: AGENTS.md  PROMPT_build.md  PROMPT_plan.md  PROMPT_plan_work.md  loop.sh
